ui(insiden): Fix event list tags too close to each other

--- a/src/app/insiden/event-list/event-list.component.scss
+++ b/src/app/insiden/event-list/event-list.component.scss
@@ -24,6 +24,10 @@
     margin-top: 20px;
 }
 
+.incident-tags {
+    margin-bottom: 5px;
+}
+
 .incident-tags-separator {
     margin-right: 7px;
 }
